Updated to Infinispan 14 and JGroups 5.2.6